Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -42,9 +42,10 @@
 <a name="list-" class="anchor" href="#list-"><span class="octicon octicon-link"></span></a>list :</h4>
 
 <ul>
-<li>bloom</li>
-<li>dragmove</li>
-<li>deconstructive</li>
+<li><a href="bloom">bloom</a></li>
+<li><a href="dragmove">dragmove</a></li>
+<li><a href="deconstructive">deconstructive</a></li>
+<li><a href="digiflip">digiflip</a></li>
 </ul>
         </section>
 
