Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -39,6 +39,10 @@
 </h3>
 
 <h4>
+<a name="source-from-graphics-dojo-qt4--httpsqtgitoriousorgqt-labsgraphics-dojo" class="anchor" href="#source-from-graphics-dojo-qt4--httpsqtgitoriousorgqt-labsgraphics-dojo"><span class="octicon octicon-link"></span></a>Source from graphics dojo Qt4 : <a href="https://qt.gitorious.org/qt-labs/graphics-dojo">https://qt.gitorious.org/qt-labs/graphics-dojo</a>
+</h4>
+
+<h4>
 <a name="list-" class="anchor" href="#list-"><span class="octicon octicon-link"></span></a>list :</h4>
 
 <ul>
@@ -46,6 +50,8 @@
 <li><a href="dragmove">dragmove</a></li>
 <li><a href="deconstructive">deconstructive</a></li>
 <li><a href="digiflip">digiflip</a></li>
+<li><a href="dragremote">dragremote</a></li>
+<li><a href="fancybrowser">fancybrowser</a></li>
 </ul>
         </section>
 
