Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -52,6 +52,9 @@
 <li><a href="digiflip">digiflip</a></li>
 <li><a href="dragremote">dragremote</a></li>
 <li><a href="fancybrowser">fancybrowser</a></li>
+<li><a href="flickable">flickable</a></li>
+<li><a href="flickcharm">flickcharm</a></li>
+<li><a href="genie">genie</a></li>
 </ul>
         </section>
 
